# KoboldKhat

./: CMakeLists.txt  build.bat  build.sh  client example.txt  compile_commands.json  server example.txt
.cache/clangd/index/: Logging.cpp.91CF3AD77E186098.idx  Logging.h.B7D09ED5A23E7061.idx  address.hpp.D7A41F756986E87D.idx  address.hpp.F4CD44B435F024E7.idx  address.ipp.83CE342CF9AC1658.idx  address_v4.hpp.2328E83103434FC0.idx  address_v4.hpp.25A41BB7C9523177.idx  address_v4.ipp.3B5ADCDC3824D97D.idx  address_v4_iterator.hpp.91E3BD730766E9B8.idx  address_v4_range.hpp.CAB7AF17FCD893FE.idx  address_v6.hpp.2492C0B9CE32ECD6.idx  address_v6.hpp.3E844BA670502F92.idx  address_v6.ipp.7CDF2E6E34475497.idx  address_v6_iterator.hpp.FAB629763BC92E19.idx  address_v6_range.hpp.D9DE2536A21A7172.idx  allocator.hpp.854AE51544F9B984.idx  any_completion_executor.hpp.8B6E3D06A62BD354.idx  any_completion_executor.ipp.EBC460DBEBA30651.idx  any_completion_handler.hpp.0EDFBFEB036FCBF1.idx  any_executor.hpp.3B06E2C683F79A60.idx  any_io_executor.hpp.E7591786634B4DF1.idx  any_io_executor.ipp.936A5A4E12DB9D45.idx  append.hpp.998C54F340E6ACF6.idx  append.hpp.F7D314B1A882CEC8.idx  array.hpp.6436FCEC221FE850.idx  array_fwd.hpp.487FFCE1CD88E434.idx  as_invocable.hpp.993F1EC83F9D2676.idx  as_operation.hpp.44D6178B0643C5D1.idx  (+480 more)
client/: CMakeLists.txt  main.cpp
client/depend/GLAD/glad/: glad.h
client/depend/GLAD/src/: glad.c
common/: CMakeLists.txt  Logging.cpp  Logging.h  client.cpp  client.h  networking.cpp  networking.h  server.cpp  server.h  tsqueue.hpp
server/: CMakeLists.txt  main.cpp
